Made login errors display in a better location and changed their style. Fixed an isseu with login form not showing certain error messages, and made the messages a bit better. Added back cesar's alternating colors to table rows. Made landing page nicer, centered, made the transaction button nicer and animated.

--- a/northark-frontend/src/styles/index.scss
+++ b/northark-frontend/src/styles/index.scss
@@ -83,7 +83,44 @@ nav>h1{
   font-size: inherit;
 }
 
+.Error{
+  color:rgb(224, 11, 11);
+  font-size: 1.1rem;
+}
 
+
+.Landing{
+  margin: auto;
+  margin-top: 20vh;
+  font-size: 1.4rem;
+}
+
+
+.Landing-Transaction-Button{
+  
+  background: rgb(27, 54, 90);
+  border: 2px solid rgb(27, 54, 90);
+  border-radius: 5px;
+  color: rgb(221, 221, 221);
+  font-size: inherit;
+  margin-top: 2rem;
+  padding: 0.6rem;
+  text-decoration: underline;
+  transition: all 0.20s ease-out;
+  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0 2px 3px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.2);
+}
+
+.Landing-Transaction-Button:hover, .Landing-Transaction-Button:active{
+  background-color:rgb(20, 59, 185);
+  
+}
+
+
+.Landing-Transaction-Button:active{
+  transform: translateY(0.15rem);
+  
+}
 
 
 /*
@@ -133,6 +170,11 @@ width: 100%;
 th, td{
   padding: 0.75rem;
 }
+
+tr:nth-child(even){
+  background-color: #f2f2f2;
+}
+
 
 th{
 }
